[package]
edition = "2021"
authors = ["Polka Biome Ltd. <jihoon@tutanota.de>"]
license = "BSD-4-Clause"
homepage = "https://sora.org"
repository = "https://github.com/sora-xor/sora2-network"
name = "assets"
version = "1.3.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
currencies = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
hex-literal = { workspace = true }
serde = { version = "1.0.128", default-features = false, optional = true, features = [
    "derive",
] }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
tiny-keccak = { workspace = true, features = ["keccak"] }
tokens = { workspace = true, default-features = false }
traits = { workspace = true, default-features = false }
common = { path = "../../common", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-io = { workspace = true, default-features = false }

common = { path = "../../common", features = ["test"] }
permissions = { path = "../permissions" }

[features]
default = ["std"]

std = [
    "codec/std",
    "scale-info/std",
    "common/std",
    "currencies/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "tokens/std",
    "traits/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
