[package]
edition = '2021'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'
name = 'band'
version = '1.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
sp-std = { workspace = true, default-features = false }
common = { path = "../../common", default-features = false }
hex-literal = { workspace = true }
fallible-iterator = { workspace = true, default-features = false }
log = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
oracle-proxy = { path = "../oracle-proxy", default-features = false }
xst = { path = "../xst", default-features = false }
tokens = { workspace = true, default-features = false }


[features]
default = ['std']
std = [
    "codec/std",
    "scale-info/std",
    'fallible-iterator/std',
    "frame-support/std",
    "frame-system/std",
    "oracle-proxy/std",
    "sp-std/std",
    "common/std",
    "tokens/std",
    "frame-benchmarking/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
