[package]
edition = '2018'
name = 'bonding-curve-pool'
version = '0.1.0'
authors = ['Polka Biome Ltd. <jihoon@tutanota.de>']
license = "BSD-4-Clause"
homepage = 'https://sora.org'
repository = 'https://github.com/sora-xor/sora2-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
currencies = { version = "0.4", package = "orml-currencies", default-features = false }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
sp-arithmetic = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
tokens = { version = "0.4", package = "orml-tokens", default-features = false }

assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
dex-api = { path = "../dex-api", default-features = false }
permissions = { path = "../permissions", default-features = false }
technical = { path = "../technical", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"
pallet-balances = { version = "3", default-features = false }
sp-core = { version = "3", default-features = false }
sp-io = { version = "3", default-features = false }

assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
dex-api = { path = "../dex-api" }
dex-manager = { path = "../dex-manager" }
mock-liquidity-source = { path = "../mock-liquidity-source" }
permissions = { path = "../permissions" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }

[features]
default = ['std']
std = [
    'codec/std',
    'currencies/std',
    'frame-support/std',
    'frame-system/std',
    'orml-traits/std',
    'serde',
    'sp-arithmetic/std',
    'sp-runtime/std',
    'sp-std/std',
    'tokens/std',
]
