[package]
name = "bridge-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { version = "3", package = "parity-scale-codec", default-features = false, features = [
    "derive",
] }
log = { workspace = true }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
common = { path = "../../common", default-features = false }
bridge-types = { workspace = true, default-features = false }
technical = { path = "../technical", default-features = false }
permissions = { path = "../permissions", default-features = false }
traits = { workspace = true, default-features = false }

# delete after migration LiberlandGenericAccount pass
xcm = { workspace = true, default-features = false }

[dev-dependencies]
common = { path = "../../common", features = ["test"] }
assets = { path = "../assets" }

dispatch = { workspace = true }
evm-fungible-app = { workspace = true }
bridge-channel = { workspace = true }

sp-keyring = { workspace = true }
pallet-balances = { workspace = true }

tokens = { workspace = true }
traits = { workspace = true }
currencies = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-core/std",
    "sp-std/std",
    "sp-io/std",
    "sp-runtime/std",
    "bridge-types/std",
    "common/std",
    "traits/std",
    "technical/std",
    "permissions/std",
    # delete after migration LiberlandGenericAccount pass
    "xcm/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
#    "frame-support/runtime-benchmarks",
#    "frame-system/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
