[package]
description = "Pallet for CERES governance platform."
authors = ["Jovan Milosevic <jovan.milosevic@cerestoken.io>"]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "ceres-governance-platform"
version = "1.2.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive"] }
frame-support = { version = "3", default-features = false }
frame-system = { version = "3", default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
sp-core = { version = "3", default-features = false }
sp-runtime = { version = "3", default-features = false }
sp-std = { version = "3", default-features = false }
technical = { path = "../technical", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }
permissions = { path = "../permissions", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
hex-literal = "0.3.1"
frame-benchmarking = { version = "3", default-features = false, optional = true }

[dev-dependencies]
assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
currencies = { version = "0.4", package = "orml-currencies", default-features = false }
dex-manager = { path = "../dex-manager", default-features = false }
ceres-governance-platform = { path = ".", default-features = false }
pallet-balances = { version = "3", default-features = false }
sp-io = { version = "3", default-features = false }
tokens = { version = "0.4", package = "orml-tokens", default-features = false }
orml-traits = { version = "0.4", package = "orml-traits", default-features = false }
permissions = { path = "../permissions" }
pool-xyk = { path = "../pool-xyk", default-features = false }
pswap-distribution = { path = "../pswap-distribution" }
technical = { path = "../technical" }
trading-pair = { path = "../trading-pair" }
price-tools = { path = "../price-tools" }
liquidity-proxy = { path = "../liquidity-proxy" }

[features]
default = ['std']

std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    'serde',
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
]