[package]
description = "Pallet for CERES Launchpad/ILO platform."
authors = [
    "Danijel Radulovic Ltd. <danijel.radulovic@cerestoken.io>, Jovan Milosevic <jovan.milosevic@cerestoken.io>",
]
license = "BSD-4-Clause"
homepage = "https://cerestoken.io"
repository = "https://github.com/sora-xor/sora2-network"
name = "ceres-launchpad"
version = "1.0.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ceres-liquidity-locker = { path = "../ceres-liquidity-locker", default-features = false }
ceres-token-locker = { path = "../ceres-token-locker", default-features = false }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
assets = { path = "../assets", default-features = false }
common = { path = "../../common", default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
serde = { version = "1.0.101", optional = true, features = [
    "derive",
], default-features = false }
pool-xyk = { path = "../pool-xyk", default-features = false }
pswap-distribution = { path = "../pswap-distribution", default-features = false }
vested-rewards = { path = "../vested-rewards", default-features = false }
trading-pair = { path = "../trading-pair", default-features = false }
technical = { path = "../technical", default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
hex-literal = { workspace = true }

[dev-dependencies]
assets = { path = "../assets" }
common = { path = "../../common", features = ["test"] }
currencies = { workspace = true }
demeter-farming-platform = { path = "../demeter-farming-platform" }
sp-io = { workspace = true }
tokens = { workspace = true }
pallet-balances = { workspace = true }
permissions = { path = "../permissions" }
technical = { path = "../technical" }
pswap-distribution = { path = "../pswap-distribution" }
multicollateral-bonding-curve-pool = { path = "../multicollateral-bonding-curve-pool" }
dex-manager = { path = "../dex-manager" }

[features]
default = ["std"]

std = [
    "codec/std",
    "common/std",
    "pool-xyk/std",
    "pswap-distribution/std",
    "vested-rewards/std",
    "trading-pair/std",
    "technical/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-timestamp/std",
    "ceres-liquidity-locker/std",
    "ceres-token-locker/std",
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
]

try-runtime = ["frame-support/try-runtime"]
